--- a/index.html
+++ b/index.html
@@ -12,5 +12,90 @@
         />
         <link rel="stylesheet" href="./style.css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <div class="phone">
+                <div class="header">
+                    <div>
+                        <i class="icon">b</i>
+                        <img
+                            src="./docs/assets/avatar.jpg"
+                            alt="avatar"
+                            class="avatar"
+                        />
+                        <div>
+                            <p class="bold">Samuel Green</p>
+                            <small class="light">Available to Walk</small>
+                        </div>
+                    </div>
+                    <i class="icon">t</i>
+                </div>
+
+                <div class="content">
+                    <div class="message from">
+                        That sounds great. I'd be happy with that.
+                    </div>
+                    <div class="message from">
+                        Could you send over some pictures of your dog, please?
+                    </div>
+                    <div class="gallery">
+                        <img src="./docs/assets/dog-image-1.jpg" alt="dog 1" />
+                        <img src="./docs/assets/dog-image-2.jpg" alt="dog 2" />
+                        <img src="./docs/assets/dog-image-3.jpg" alt="dog 3" />
+                    </div>
+                    <div class="message to">
+                        Here are a few pictures. She's a happy girl!
+                    </div>
+                    <div class="message to">Can you make it?</div>
+                    <div class="message from">
+                        She looks so happy! The time we discussed works. How
+                        long shall I take her out for?
+                    </div>
+                    <div class="walk">
+                        <div>
+                            <i class="icon">c</i>
+                            <p>30 minute walk</p>
+                        </div>
+                        <span class="big bold">$29</span>
+                    </div>
+                    <div class="walk">
+                        <div>
+                            <i class="icon">c</i>
+                            <p>1 hour walk</p>
+                        </div>
+                        <span class="big bold">$49</span>
+                    </div>
+                </div>
+                <div class="messageBox">
+                    <p>Type a message…</p>
+                    <i class="icon">n</i>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <h1>Simple booking</h1>
+            <p>
+                Stay in touch with our dog walkers through the chat interface.
+                This makes it easy to discuss arrangements and make bookings.
+                Once the walk has been completed you can rate your walker and
+                book again all through the chat.
+            </p>
+        </main>
+        <footer>
+            Challenge by
+            <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Frontend Mentor</a
+            >. Coded by
+            <a
+                href="https://github.com/sutaC"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Your Name Here</a
+            >.
+        </footer>
+    </body>
 </html>
