--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <header>
             <div class="phone">
                 <div class="header">
-                    <div>
+                    <div class="wrapper">
                         <i class="icon">b</i>
                         <img
                             src="./docs/assets/avatar.jpg"
                             alt="avatar"
                             class="avatar"
                         />
-                        <div>
-                            <p class="bold">Samuel Green</p>
-                            <small class="light">Available to Walk</small>
+                        <div class="center">
+                            <p>Samuel Green</p>
+                            <small class="subHeading">Available to Walk</small>
                         </div>
                     </div>
                     <i class="icon">t</i>
@@ -94,7 +94,7 @@
                 href="https://github.com/sutaC"
                 target="_blank"
                 rel="noopener noreferrer"
-                >Your Name Here</a
+                >sutaC</a
             >.
         </footer>
     </body>
