--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                         She looks so happy! The time we discussed works. How
                         long shall I take her out for?
                     </div>
-                    <div class="walk">
-                        <div>
+                    <div class="offer">
+                        <div class="wrapper">
                             <i class="icon">c</i>
                             <p>30 minute walk</p>
                         </div>
-                        <span class="big bold">$29</span>
+                        <span class="price">$29</span>
                     </div>
-                    <div class="walk">
-                        <div>
+                    <div class="offer">
+                        <div class="wrapper">
                             <i class="icon">c</i>
                             <p>1 hour walk</p>
                         </div>
-                        <span class="big bold">$49</span>
+                        <span class="price">$49</span>
                     </div>
                 </div>
                 <div class="messageBox">
