--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="phone">
                 <div class="header">
                     <div class="wrapper">
-                        <i class="icon">b</i>
+                        <i class="icon back"></i>
                         <img
                             src="./docs/assets/avatar.jpg"
                             alt="avatar"
@@ -28,7 +28,7 @@
                             <small class="subHeading">Available to Walk</small>
                         </div>
                     </div>
-                    <i class="icon">t</i>
+                    <i class="icon menu"></i>
                 </div>
 
                 <div class="content">
@@ -53,14 +53,14 @@
                     </div>
                     <div class="offer">
                         <div class="wrapper">
-                            <i class="icon">c</i>
+                            <i class="radio"></i>
                             <p>30 minute walk</p>
                         </div>
                         <span class="price">$29</span>
                     </div>
                     <div class="offer">
                         <div class="wrapper">
-                            <i class="icon">c</i>
+                            <i class="radio"></i>
                             <p>1 hour walk</p>
                         </div>
                         <span class="price">$49</span>
@@ -68,7 +68,9 @@
                 </div>
                 <div class="messageBox">
                     <p>Type a message…</p>
-                    <i class="icon">n</i>
+                    <button class="submit">
+                        <i class="icon arrowRight"></i>
+                    </button>
                 </div>
             </div>
         </header>
